# MinecraftC

./: CLAUDE.md  CMakeLists.txt
assets/shaders/: block.frag  block.vert  text.frag  text.vert  ui.frag  ui.vert  wireframe.frag  wireframe.vert
src/: Config.h  main.cpp
src/core/: Window.cpp  Window.h
src/debug/: Assert.h  CrashHandler.cpp  CrashHandler.h  Log.cpp  Log.h  OpenGL.h  Profiler.h
src/player/: Player.cpp  Player.h
src/renderer/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/threading/: ThreadPool.cpp  ThreadPool.h
src/ui/: FontRenderer.cpp  FontRenderer.h  Hotbar.cpp  Hotbar.h  Inventory.cpp  Inventory.h  Menu.cpp  Menu.h  SettingsMenu.cpp  SettingsMenu.h  UIRenderer.cpp  UIRenderer.h
src/world/: BiomeMap.cpp  BiomeMap.h  Block.cpp  Block.h  CaveGenerator.cpp  CaveGenerator.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  HeightPipeline.cpp  HeightPipeline.h  Noise.cpp  Noise.h  OreGenerator.cpp  OreGenerator.h  RegionGenerationData.h  RegionGenerator.cpp  RegionGenerator.h  TreeGenerator.cpp  TreeGenerator.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
